<resources>
    <string name="app_name">Kidd Nation 254</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Entertainment</string>
    <string name="slide_1_desc">The best place to get entertained with the videos!</string>
    <string name="slide_2_title">Trends</string>
    <string name="slide_2_desc">You better know what\'s trending!</string>
    <string name="slide_3_title">News</string>
    <string name="slide_3_desc">Get latest news update!</string>
    <string name="slide_4_title">Quotes</string>
    <string name="slide_4_desc">We have daily quotes in store for you!</string>
    <string name="todo">TODO</string>
    <string name="password_hint">enter password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="username_hint">enter username</string>
    <string name="username_email_hint">enter username or email</string>
    <string name="email_hint">email(example@gmail.com)</string>
    <string name="phone_hint">mobile number(07XXXXXXXX)</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="not_registered_text">Not registered?\n Click here to register.</string>
    <string name="go_to_login_text">Already registered?\n Click here to login.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="videos_text">Videos</string>
    <string name="news_text">News</string>
    <string name="posts_text">Posts</string>
    <string name="quotes_text">Quotes</string>
    <string name="profile_text">Profile</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_navigation">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">read more</string>
    <string name="body_text">Accountability powers you toward your goals, and these guidelines for unleashing its power will get you over the rainbow to what you want. They\'re all valuable traits, but they pale in comparison to what each of us needs most in the quest to total life success:</string>
    <string name="comment_heading">(0)Comments</string>
    <string name="comment_hint">enter your comment here</string>
    <string name="comment_text">Comment</string>
    <string name="show_more">Show More Comments</string>
    <string name="show_more_posts_text">show more posts</string>
    <string name="show_more_videos_text">show more videos</string>
    <string name="play_video_text">watch video</string>
    <string name="quotes_heading">Today\'s Quote</string>
    <string name="change_profile_picture">Change Profile Photo</string>
    <string name="view_profile">View Profile</string>
    <string name="logout_text">Logout</string>
    <string name="about_text">About</string>
    <string name="quit">Quit</string>
    <string name="username_label">Username:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="title_Profile">Profile</string>
    <string name="take_picture">Take Picture</string>
    <string name="or">OR</string>
    <string name="chose_an_image">Chose an image</string>
    <string name="read_file">This app needs access to your file storage so that it can read files.</string>
    <string name="save_file">This app needs access to your file storage so that it can save files.</string>
    <string name="choose_file">Choose File</string>
    <string name="upload">Upload</string>
    <string name="file_name">File Name</string>
    <string name="about">
        You can get news, trends and motivation from this app. You can also get  entertained with the the funny
        videos.\n
        Please give us 5 stars on Play Store if you like this app.
    </string>
    <string name="hint_search">Search...</string>
    <string name="no_post">Sorry, there is no such post. Try a different search term.</string>
    <string name="error_fetch_post">
        Sorry, there was an error while fetching the posts.
        Please check your internet connection.
    </string>
    <string name="error_fetch_memes">
        Sorry, there was an error while fetching memes.
        Please check your internet connection.
    </string>
    <string name="no_video">Sorry, there is no such video. Try a different search term.</string>
    <string name="error_fetch_video">Sorry, there was an error while fetching the videos.
        Please check your internet connection.
    </string>
    <string name="error_fetch_single_post">Sorry, there was an error while fetching the post.
        Please check your internet connection.
    </string>
    <string name="error_fetch_quote">
        Sorry, there was an error while fetching the Today\'s Quote.
        Please check your internet connection.
    </string>
    <string name="version">Version: 1.0</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset">Reset.</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register.</string>
    <string name="login">Login.</string>
    <string name="already_registered">Already registered?</string>
    <string name="reset_txt">reset</string>
    <string name="send_code">send code</string>
    <string name="activation_txt">Enter verification code sent to your email to activate your account</string>
    <string name="activate">activate</string>
    <string name="reset_text">Enter password reset code sent to your email</string>
</resources>