<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seafoam"
    android:padding="25dp"
    tools:context="com.kiddnation254.kiddnation254.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userImage"
        android:layout_marginTop="35dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_account_box_white_24dp"
        android:drawableStart="@drawable/baseline_account_box_white_24dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColorLink="#000"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="22dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_lock_white_24dp"
        android:drawableStart="@drawable/baseline_lock_white_24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/login_text"
        android:textColor="#fff"
        android:textSize="14sp"
        android:background="@drawable/button"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/app_logo_transparent" />

    <RelativeLayout
        android:id="@+id/wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/forgotPwdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/resetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/forgotPwdTxt"
            android:text="@string/reset"
            android:layout_toRightOf="@+id/forgotPwdTxt"
            android:textSize="16sp"
            android:textColor="@color/ocean"
            android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registerWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrapper"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/goToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/registerText"
            android:text="@string/register"
            android:layout_toRightOf="@+id/registerText"
            android:textSize="16sp"
            android:textColor="@color/ocean"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </RelativeLayout>

</RelativeLayout>
