<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seafoam"
    tools:context="com.kiddnation254.kiddnation254.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userImage"
        android:layout_marginTop="17dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_account_box_white_24dp"
        android:drawableStart="@drawable/baseline_account_box_white_24dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColorLink="#000"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableTint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="14dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_email_white_24dp"
        android:drawableStart="@drawable/baseline_email_white_24dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColorLink="#000"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableTint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_call_white_24dp"
        android:drawableStart="@drawable/baseline_call_white_24dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColorLink="#000"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableTint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phone"
        android:layout_marginTop="13dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_lock_white_24dp"
        android:drawableStart="@drawable/baseline_lock_white_24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableTint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="12dp"
        android:background="@drawable/input"
        android:drawableLeft="@drawable/baseline_lock_white_24dp"
        android:drawableStart="@drawable/baseline_lock_white_24dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:drawableTint="#fff"
        android:drawablePadding="5dp"
        android:fontFamily="serif-monospace"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/register_text"
        android:textSize="14sp"
        android:textColor="#fff"
        android:background="@drawable/button"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo_transparent" />

    <RelativeLayout
        android:id="@+id/wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRegister"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/loginTxt"
            android:text="@string/login"
            android:layout_toRightOf="@+id/loginTxt"
            android:textSize="16sp"
            android:textColor="@color/ocean"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />
    </RelativeLayout>

    </RelativeLayout>

    <include layout="@layout/progress_bar"
        android:visibility="gone"/>

</RelativeLayout>
