<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_choose_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/baseline_photo_size_select_actual_white_24dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/chose_an_image"
            android:textColor="#fff" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_file"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/tv_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_preview"
            android:layout_centerHorizontal="true"
            android:text="@string/file_name"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_file_name"
            android:background="@drawable/button"
            android:text="@string/upload"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>



</RelativeLayout>